# Cmke-Practice

lib/: CMakeLists.txt
src/: CMakeLists.txt  main.c
